Limit mem.